Get Group Members – Fixed ✅

--- a/index.html
+++ b/index.html
@@ -1123,7 +1123,7 @@
                         What's New in Version 5.0.0
                     </h2>
                     <ul class="changelog-list">
-                        <li class="changelog-item">✅ Fixed bugs</li>
+                        <li class="changelog-item">✅ Get Group Members – Fixed </li>
                     </ul>
                 </div>
 
